# lunch

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  database.py  gunicorn.conf.py  init_db.py  models.py  pyproject.toml  wsgi.py
data/: lunch_options.json
js/: checkout.js
live/: .terraform.lock.hcl  cloud-init.yaml  data.tf  iam.tf  ingress.tf  main.tf  outputs.tf  registry.tf  security.tf  variables.tf  versions.tf  vpc.tf
live/admin/: .terraform.lock.hcl  services.tf  variables.tf  versions.tf
scripts/: build-push-image.sh  check_duplicate_orders.sh  configure_data.sh  dedup_orders.sh  entrypoint.sh  generate_favicon.sh  print_orders.sh  remove_orders.sh  show_all_orders.sh  show_payment_orders.sh  start.sh
static/js/: cart-display.js  cart.js  checkout-payment.js  checkout.js  form-handler.js
templates/: base.html  cart.html  checkout.html  confirmation.html  dashboard.html  index.html  login.html  print_confirmation.html  register.html
tests/: conftest.py  test_checkout.py  test_confirmation.py  test_orders.py  test_stripe_config.py  test_webhook.py
