[project]
name = "lunch-ordering"
version = "0.1.0"
description = "A web application for ordering lunch for the week"
authors = [
    {name = "Shea Williams", email = "shea@cppnow.com"}
]
dependencies = [
    "Flask>=3.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-Login>=0.6.3",
    "flask-session",
    "gunicorn",
    "Werkzeug>=3.1",
    "python-dotenv>=1.0.1",
    "pytz",
    "sqlalchemy",
    "stripe>=12.0.0",
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "ruff",
]
